- We now handle each user session in a seperate process, this is to be able to only accept authenticated users (with accordance to the EULA for libspotify). The majority of this work has been refactoring to better handle all the multi-threaded scenarios that currently exists. The beauty of WCF here is that we really don't need to change anything else, WCF will talk IPC just as well as TCP/IP or other supported protocols.
- Added a debugger.reg which can be used to enable debbuging for the Restify.Server child processes

--- a/Restify.Server/App.config
+++ b/Restify.Server/App.config
@@ -36,6 +36,19 @@
                     </baseAddresses>
                 </host>
             </service>
+            <service name="Restify.Services.LoginService">
+                <endpoint address="" binding="wsHttpBinding" contract="Restify.Services.ILoginService">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <host>
+                    <baseAddresses>
+                        <add baseAddress="http://localhost:8732/Design_Time_Addresses/Restify.Services/LoginService/" />
+                    </baseAddresses>
+                </host>
+            </service>
         </services>
     </system.serviceModel>
 </configuration>
