--- a/Restify.Server/Restify.Server.csproj
+++ b/Restify.Server/Restify.Server.csproj
@@ -47,12 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Threading\CreateMutexMessage.cs" />
+    <Compile Include="Threading\IMessage.cs" />
+    <Compile Include="Threading\MessageQueue.cs" />
+    <Compile Include="Threading\ReleaseMutexMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BackEndService.cs" />
     <Compile Include="Services\FrontEndService.cs" />
     <Compile Include="Services\IBackEndService.cs" />
     <Compile Include="Services\IFrontEndService.cs" />
+    <Compile Include="Services\ILoginService.cs" />
+    <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\RestifyLogin.cs" />
     <Compile Include="Services\RestifyPlaylist.cs" />
     <Compile Include="Services\RestifyPlaylistCollection.cs" />
@@ -67,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="debugger.reg" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\index.htm" />
@@ -79,6 +86,7 @@
     <Content Include="Content\stylesheet.css" />
     <Content Include="README.TXT" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
