I'm losing a lot of sleep over WCF, I'm really close to just write my own damn HTTP server and just skip this .NET stuff altogether... *sign*

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ Restify.Spotify/Debug/*
 Restify.Spotify/*.user
 *.suo
 Restify.Server/spotify_appkey.key
+Restify.Server/*.csproj.user
+Testify/bin/*
+Testify/obj/*
+Testify/*.csproj.user
