--- a/Testify/app.config
+++ b/Testify/app.config
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <configuration>
-    <!--<system.diagnostics>
+    <system.diagnostics>
         <trace autoflush="true" />
         <sources>
             <source name="System.ServiceModel"
-                    switchValue="All"
+                    switchValue="Information, ActivityTracing"
                     propagateActivity="true">
                 <listeners>
                     <add name="sdt"
@@ -13,7 +13,7 @@
                 </listeners>
             </source>
         </sources>
-    </system.diagnostics>-->
+    </system.diagnostics>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
