--- a/Testify/Testify.csproj
+++ b/Testify/Testify.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2CA71BB7-DE60-4202-AF15-07C104D9912C}</ProjectGuid>
+    <ProjectGuid>{75B0AD69-B2E8-405A-A4E4-70196B20CCC1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Restify</RootNamespace>
-    <AssemblyName>Restify.Server</AssemblyName>
+    <RootNamespace>Testify</RootNamespace>
+    <AssemblyName>Testify</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -47,48 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Services\RestifyLoginResponse.cs" />
-    <Compile Include="Services\SpotifyInstance.cs" />
-    <Compile Include="Threading\CreateMutexMessage.cs" />
-    <Compile Include="Threading\IMessage.cs" />
-    <Compile Include="Threading\MessageQueue.cs" />
-    <Compile Include="Threading\ReleaseMutexMessage.cs" />
+    <Compile Include="IService1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BackEndService.cs" />
-    <Compile Include="Services\FrontEndService.cs" />
-    <Compile Include="Services\IBackEndService.cs" />
-    <Compile Include="Services\IFrontEndService.cs" />
-    <Compile Include="Services\ILoginService.cs" />
-    <Compile Include="Services\LoginService.cs" />
-    <Compile Include="Services\RestifyLogin.cs" />
-    <Compile Include="Services\RestifyPlaylist.cs" />
-    <Compile Include="Services\RestifyPlaylistCollection.cs" />
-    <Compile Include="Services\RestifyViewModel.cs" />
-    <Compile Include="SpotifyManager.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Restify.Spotify\Restify.Spotify.vcxproj">
-      <Project>{654FD394-FE7B-491E-8126-13711A1EE5FC}</Project>
-      <Name>Restify.Spotify</Name>
-    </ProjectReference>
+    <Compile Include="Service1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="debugger.reg" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\index.htm" />
-    <Content Include="Content\jquery-1.4.2.min.js" />
-    <Content Include="Content\jquery-1.6.2.min.js" />
-    <Content Include="Content\jquery-tmpl.js" />
-    <Content Include="Content\knockout-1.2.1.js" />
-    <Content Include="Content\restify.js" />
-    <Content Include="Content\spotify-core-logo-128x128.png" />
-    <Content Include="Content\stylesheet.css" />
     <Content Include="README.TXT" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
