WOW, figured out the WCF issue. Don't send requests from within WCF services to other WCF services, that messes with the thread context in a bad way...

--- a/Restify.Server/Restify.Server.csproj
+++ b/Restify.Server/Restify.Server.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Services\RestifyLoginResponse.cs" />
     <Compile Include="Services\SpotifyInstance.cs" />
     <Compile Include="Threading\CreateMutexMessage.cs" />
+    <Compile Include="Threading\DelegateMessage.cs" />
     <Compile Include="Threading\IMessage.cs" />
     <Compile Include="Threading\MessageQueue.cs" />
     <Compile Include="Threading\ReleaseMutexMessage.cs" />
