Alright, it's now possible to play and queue up songs thought the REST API, however due to WCF caching behaviour I'll need to change some things in the API in the future, there's a lot of refactoring going to happen going forward and there's some mocking to be done here. Hopefully, I can move more of the C++/CLI stuff into C#, C++/CLI is nice and all, but a bit flunky some times.
So, this is like a nice alpha version, things happen and it works. One thing though, while multiple users can connect they music the enqueue will play simultaneously with other music and there's not stop button as of right now...

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,29 @@
 
+spotify_appkey.key
+
 Restify.opensdf
 Restify.sdf
+
 Debug/*
+Release/*
+
 Restify.Server/bin/*
 Restify.Server/obj/*
+
 Restify.Spotify/Debug/*
+Restify.Spotify/Release/*
 Restify.Spotify/*.user
+
 *.suo
-Restify.Server/spotify_appkey.key
+
 Restify.Server/*.csproj.user
+
 Testify/bin/*
 Testify/obj/*
 Testify/*.csproj.user
-_ReSharper.Restify/*
+
+_ReSharper.*/*
 *.ReSharper.user
+*/bin/*
+*/obj/*
+*/*.csproj.user
