--- a/Restify.Client/Restify.Client.csproj
+++ b/Restify.Client/Restify.Client.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2CA71BB7-DE60-4202-AF15-07C104D9912C}</ProjectGuid>
+    <ProjectGuid>{295489F3-14E6-48D5-8DD9-6DDF215BC1D7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Restify</RootNamespace>
-    <AssemblyName>Restify.Server</AssemblyName>
+    <AssemblyName>Restify.Client</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -37,9 +37,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,60 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Services\BackEndServiceClient.cs" />
-    <Compile Include="Services\RestifyLoginRequest.cs" />
-    <Compile Include="Services\RestifyLoginResponse.cs" />
-    <Compile Include="Services\RestifyPlaylistRequest.cs" />
-    <Compile Include="Services\RestifyTrack.cs" />
-    <Compile Include="Services\RestifyTrackRequest.cs" />
-    <Compile Include="Services\SpotifyInstance.cs" />
-    <Compile Include="Threading\ThreadContext.cs" />
-    <Compile Include="Threading\CreateMutexMessage.cs" />
-    <Compile Include="Threading\DelegateMessage.cs" />
-    <Compile Include="Threading\IMessage.cs" />
-    <Compile Include="Threading\MessageQueue.cs" />
-    <Compile Include="Threading\ReleaseMutexMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BackEndService.cs" />
-    <Compile Include="Services\FrontEndService.cs" />
-    <Compile Include="Services\IBackEndService.cs" />
-    <Compile Include="Services\IFrontEndService.cs" />
-    <Compile Include="Services\ILoginService.cs" />
-    <Compile Include="Services\LoginService.cs" />
-    <Compile Include="Services\RestifyPlaylist.cs" />
-    <Compile Include="Services\RestifyPlaylistCollection.cs" />
-    <Compile Include="Services\RestifyViewModel.cs" />
-    <Compile Include="SpotifyManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Restify.Server\Restify.Server.csproj">
+      <Project>{2CA71BB7-DE60-4202-AF15-07C104D9912C}</Project>
+      <Name>Restify.Server</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Restify.Spotify\Restify.Spotify.vcxproj">
       <Project>{654FD394-FE7B-491E-8126-13711A1EE5FC}</Project>
       <Name>Restify.Spotify</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="debugger-disable.reg" />
-    <None Include="debugger-enable.reg" />
-    <None Include="fiddler2.reg" />
-    <None Include="urlacladd.bat" />
-    <None Include="urlaclrm.bat" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\index.htm" />
-    <Content Include="Content\jquery-1.4.2.min.js" />
-    <Content Include="Content\jquery-1.6.2.min.js" />
-    <Content Include="Content\jquery-tmpl.js" />
-    <Content Include="Content\knockout-1.2.1.js" />
-    <Content Include="Content\restify.js" />
-    <Content Include="Content\spotify-core-logo-128x128.png" />
-    <Content Include="Content\stylesheet.css" />
     <Content Include="README.TXT" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
