--- a/Restify.Spotify/Restify.Spotify.vcxproj.filters
+++ b/Restify.Spotify/Restify.Spotify.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="SpotifyAsync.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpotifyTrack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.txt" />
