So, the prototyping is kinda done, it works and all the troubles have been sort of worked out. Now, I'm making a lot of changes, refactoring and rewriting code to better suite the type of API. I wanna end up using, the idea is to push more of the thread synchronization stuff into the managed library and do as little as possible with the C++/CLI libspotify wrapper code

--- a/Restify.Server/Restify.Server.csproj
+++ b/Restify.Server/Restify.Server.csproj
@@ -37,9 +37,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\BackEndGatewayService.cs" />
     <Compile Include="Services\BackEndServiceClient.cs" />
     <Compile Include="Services\RestifyLoginRequest.cs" />
     <Compile Include="Services\RestifyLoginResponse.cs" />
@@ -100,7 +103,6 @@
     <Content Include="Content\stylesheet.css" />
     <Content Include="README.TXT" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
