--- a/Restify.Spotify/Restify.Spotify.vcxproj
+++ b/Restify.Spotify/Restify.Spotify.vcxproj
@@ -71,22 +71,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="restify.cpp" />
-    <ClCompile Include="SpotifyAsync.cpp" />
+    <ClCompile Include="SpotifySession.cpp" />
+    <ClCompile Include="SpotifyLink.cpp" />
     <ClCompile Include="SpotifyPlaylist.cpp" />
     <ClCompile Include="SpotifyPlaylistCollection.cpp" />
-    <ClCompile Include="SpotifySession.cpp" />
-    <ClCompile Include="SpotifySessionWaveform.cpp" />
     <ClCompile Include="SpotifyTrack.cpp" />
+    <ClCompile Include="waveform.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SpotifyAsync.h" />
+    <ClInclude Include="SpotifySession.h" />
     <ClInclude Include="restify.h" />
     <ClInclude Include="SpotifyException.h" />
+    <ClInclude Include="SpotifyLink.h" />
     <ClInclude Include="SpotifyObservable.h" />
     <ClInclude Include="SpotifyPlaylistCollection.h" />
-    <ClInclude Include="SpotifySession.h" />
     <ClInclude Include="SpotifyPlaylist.h" />
     <ClInclude Include="SpotifyTrack.h" />
+    <ClInclude Include="waveform.h" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
