--- a/Restify.Spotify/Restify.Spotify.vcxproj.filters
+++ b/Restify.Spotify/Restify.Spotify.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="restify.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SpotifySession.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SpotifyException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -36,14 +33,17 @@
     <ClInclude Include="SpotifyPlaylistCollection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SpotifyAsync.h">
+    <ClInclude Include="SpotifyLink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpotifySession.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="waveform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SpotifySession.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="restify.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -53,13 +53,16 @@
     <ClCompile Include="SpotifyPlaylistCollection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SpotifySessionWaveform.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SpotifyAsync.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SpotifyTrack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpotifyLink.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpotifySession.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="waveform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
