--- a/Restify.Spotify/Restify.Spotify.vcxproj.filters
+++ b/Restify.Spotify/Restify.Spotify.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="waveform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SpotifySearch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="restify.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="waveform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SpotifySearch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
