Aight, this is looking kinda stable now
 - I've scrapped playlist support for now
 - Added search functionality instead (this is how you get at the music)
 - The next step is improve the play queue, so that it's fair (gonna build this on top SQL Compact)
 - Still got refactoring to do with the C++/CLI stuff, but it's starting to look quite good

--- a/Restify.Server/Restify.Server.csproj
+++ b/Restify.Server/Restify.Server.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Services\RestifySearchResult.cs" />
     <Compile Include="Services\BackEndGatewayService.cs" />
     <Compile Include="Services\BackEndServiceClient.cs" />
     <Compile Include="Services\RestifyLoginRequest.cs" />
