- I've figured out why external track links doesn't load and fixed with further refactoring as we now need to considerer metadata updates to actually play tracks added as Spotify URIs.
- I've thrown out more of the playlist stuff, but it's going to come back at a later time
- Added a test project and a test client, gonna do some thing and mocking with this
- I'm unsure as to wheter this will run but it just might ;) the project is somewhat in a disarray right now, gonna clean this up as soon as possible

--- a/Restify.Server/Restify.Server.csproj
+++ b/Restify.Server/Restify.Server.csproj
@@ -62,6 +62,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
@@ -75,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileSystemManager.cs" />
     <Compile Include="Services\RestifySearchResult.cs" />
     <Compile Include="Services\BackEndGatewayService.cs" />
     <Compile Include="Services\BackEndServiceClient.cs" />
