- Fixed most issues with audio buffers, track transition is a lot better but it's still not a solution, sometimes pieces of the audio is left stuck in the buffers, this could be due to the Waveform API but I'm not sure.
- Track metadata is now loaded when needed and it's possible to queue up songs from any instance (which was a problem before due to how tracks are loaded)
- I've also made some efforts to write more tests, these tests are not as meaningful but I try to make 'em. The only issue here is that you have to run each test in a seperate process due to how libspotify operates. This is why I created the Restify.TestClient which just invokes MSTest for each TestMethod in it's own process, it's slow, yes, but it's the only way I know of how to run these in seperate processes right now.

--- a/Restify.Spotify/Restify.Spotify.vcxproj
+++ b/Restify.Spotify/Restify.Spotify.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="waveform.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="audio.h" />
     <ClInclude Include="SpotifyMetaobject.h" />
     <ClInclude Include="SpotifySearch.h" />
     <ClInclude Include="SpotifySession.h" />
