--- a/Restify.Spotify/Restify.Spotify.vcxproj.filters
+++ b/Restify.Spotify/Restify.Spotify.vcxproj.filters
@@ -24,13 +24,16 @@
     <ClInclude Include="SpotifySession.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="waveform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SpotifySearch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SpotifyMetaobject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="waveform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -41,13 +44,13 @@
     <ClCompile Include="SpotifySession.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="waveform.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SpotifySearch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SpotifyMetaobject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="waveform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
