Further refactroing (a lot more work to be done)
 - The message queue doesn't appear to be used anymore, it still a service that runs within the app though, maybe that's unecessary
 - I've added a IServiceContext which is composed as part of the request in a container which scope is tied to the operation context (1 container per request) [as it should be]
 - Contextual parameters such as HTTP headers and session data can be get/set through the IServiceContext
 - Added a Ping method to login for diagnostic purposes

--- a/Restify.Core/Restify.Core.csproj
+++ b/Restify.Core/Restify.Core.csproj
@@ -98,9 +98,11 @@
     <Compile Include="ServiceModel.Composition\ComposableServiceExportAttribute.cs" />
     <Compile Include="ServiceModel.Composition\ComposableServiceHost.cs" />
     <Compile Include="ServiceModel.Composition\IComposableServiceMetadata.cs" />
+    <Compile Include="ServiceModel.Composition\ComposableServiceContext.cs" />
     <Compile Include="ServiceModel\IClientService.cs" />
     <Compile Include="ServiceModel\ILoginService.cs" />
     <Compile Include="ServiceModel\IQueueService.cs" />
+    <Compile Include="ServiceModel\IServiceContext.cs" />
     <Compile Include="ServiceModel\LoginRequest.cs" />
     <Compile Include="ServiceModel\LoginResponse.cs" />
     <Compile Include="ServiceModel\SearchResult.cs" />
